--- a/IzvorniKod/Frontend/pal/src/components/AddPancake.css
+++ b/IzvorniKod/Frontend/pal/src/components/AddPancake.css
@@ -51,3 +51,25 @@ button {
 button:hover {
     background-color: #FFC477; /* Darker tone on hover */
 }
+
+.dodatci-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+}
+
+.dodatak {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.dodatak-checkbox {
+    margin-right: 5px;
+    cursor: pointer;
+}
+
+.dodatak-label {
+    cursor: pointer;
+}
